static/css/style.css
html, body {
    font-family: "Libre Baskerville", sans-serif;
    background-color: #F0F0F0;
}

/* Navbar styling */

#hero-image {
    background: no-repeat fixed top url("/static/hero-bg.jpeg");
    background-size: cover;
    margin: 0;
    max-width: 100%;
    width: 100vw;
    height: 100vh;
    max-height: 100%;
}

.bg-light {
    --bs-bg-opacity: 0;
    background-color: rgba(var(--bs-light-rgb),var(--bs-bg-opacity)) !important;
}

.navbar-brand > img {
    height: 10vh;
    margin: 25px;
    margin-left: 75px;
}

.navbar-nav > .nav-item {
    font-size: 24px;
    padding: 25px;
}

.navbar-light .navbar-nav .nav-link {
    color: rgba(0,0,0,0.7);
}

.navbar-light .navbar-nav .nav-link:hover {
    color: rgba(0,0,0,1);
}

.navbar-toggler {
    position: absolute;
}

/* index page styling */

#hero-content {
    text-align: center;
    height: 90vh;
    color: #e3e6f2
}

#hero-blurb > h1 {
    font-size: 54px;
}

.learn-more-text {
    margin-left: 45%;
    text-align: center;
    position: absolute;
    bottom: 20px;
    color: white;
    font-family: "Montserrat", sans-serif;
    animation-duration: 5s;
    animation-name: fadein;
}

@keyframes fadein {
    from {
        color: rgba(255, 255, 255, 0)
    }
    to {
        color: rgb(255, 255, 255)
    }
}

.invis {
    background-color: rgba(1, 255, 255, 0);
}

/* Order page styling */

#storefront {
    text-align: center;
    height: 75vh;
    width: 80vw;
    color: #e3e6f2;
    background-color: rgba(250,250,250,.9);
    border-radius: 50px;
    border: 2px solid black;
    box-shadow: 3px 3px rgba(0,0,0,0.2);
    animation-duration: 1s;
    animation-name: store-fade-in;
}

@media screen and (max-width: 440px) {
    #storefront {
        text-align: center;
        width: 100vw;
        color: #e3e6f2;
        background-color: rgba(250,250,250,.9);
        border-radius: 0;
        border: none;
        box-shadow: none;
        animation-duration: 1s;
        animation-name: store-fade-in;
        margin-right: 0 !important;
        margin-left: 0 !important;
    }

    #hero-image {
        padding: 0;
    }
}

@keyframes store-fade-in {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}


#store-items{
    width: 90%;
    height: 60vh;
    text-align: center;
}

.store-item, .store-item-portrait  {
    padding: 0px;
    max-height: 100%;
    transition: 0.3s;
}

.store-item:hover, .store-item-portrait:hover {
    cursor: pointer;
    scale: 1.01;
    filter: drop-shadow(0px 0px 7px white)
}

table {
    color: black;
    box-shadow: none;
}

/* Store item backgrounds */
.store-item:nth-child(1), .store-item-portrait:nth-child(1) {
    background: no-repeat center url("/static/hardwoods.jpeg");
    background-size: cover;    
}

.store-item:nth-child(2), .store-item-portrait:nth-child(2) {
    background: no-repeat center url("/static/softwoods.jpg");
    background-size: cover;    
}

.store-item:nth-child(3), .store-item-portrait:nth-child(3) {
    background: no-repeat center url("/static/cookingwoods.jpg");
    background-size: cover;    
}

.store-item-portrait {
    height: 20vh;
}

.store-text {
    padding-top: 26vh;
}

.store-text-portrait {
    padding-top: 6vh;
}

.store-text, .store-text-portrait, .store-text-minimized-portrait {
    text-shadow: 2px 2px 10px black;
    pointer-events: none;
}

.store-text-portrait-minimized {
    text-shadow: 2px 2px 10px black;
    pointer-events: none;
}

.minimized-text {
    writing-mode: vertical-lr;
    text-orientation: mixed;
}   

.hidden-paragraph {
    font-size: 1.5vh;
    color: black;
    width: 100%;
    height: 40%;
    padding-left: 3vw;
    text-align: justify;
    text-indent: 30px;
    text-justify: auto;
    pointer-events: none;
}

.formstuff {
    color: green;
}

.hidden-paragraph-portrait {
    pointer-events: none;
    color: black;
    width: auto;
    height: 40%;
    padding-left: 3vw;
    text-align: justify;
    text-indent: 30px;
    text-justify: auto;
}

.active-store-item {
    padding: 0px;
    max-height: 100%;
    transition: width .3s ease;
    background: none !important;
    cursor:auto !important;
}

.active-text {
    text-align: left !important;
    padding-left: 3vw;
    text-shadow: none;
    color: black;
    padding-top: 3vh;
}

.hidden-items {
    display: none !important;
}

.hidden-rows {
    height: 100%;
}

.active-hidden-img, .active-hidden-img-portrait  {
    width: 100%;
    max-height:60%;
    display:flex;
    padding-left: 2vw;
    pointer-events: none;
    object-fit: contain;
}


@media screen and (max-width:992px) {
    .active-hidden-img, .active-hidden-img-portrait  {
        width: 40%;
    }

    .hidden-paragraph {
        font-size: 3vw;
    }

    .active-text {
        font-size: 5vw;
    }

    .navbar-brand {
        width: 100%;
        display: flex;
    }

    .navbar-brand > img {
        margin: 0 auto;
    }

    .hidden-rows {
        overflow-x: scroll;
    }

}

.active-hidden-img-portrait {
    padding-top: 2vh;
    float: right;
}

.minimized-store-item-portrait {
    height: 5vh;
}

.minimized-store-item-portrait > h1 {
    padding-top: 1vh;
}

.active-store-item-portrait {
    height: 90%;
    transition: height .3s ease;
}

#quantity_select_hard, 
#quantity_select_soft,
#quantity_select_cooking,
#checkout_section_cooking, 
#checkout_section_hard, 
#checkout_section_soft {
    height: 0;
    opacity: 0;
    overflow: hidden;
    transition: opacity 1s ease-out;
}

.checkout-btn {
    background-color: black;
    color: white;
}

.checkout-box {
    margin: auto;
    position: absolute;
    bottom: 0;
    width: 100%
}

.form-box {
    position: relative;
    padding-left: 0 !important;
    max-height: 100%;
    margin-right: 30px;
}

.form {
    max-height: 100%;
    margin-bottom: 40px;
    padding-bottom: 40px;
}

.grand-total {
    position:absolute;
    bottom:0;
    width:95%;
    height:40px;   /* Height of the footer */
    background:#e0e0e0
}

#grand_total_hard > tr:first-child {
    justify-content: left;
}

/* Checkout styling */
.fieldset-label {
    position: relative;
    right: .5rem;
}

#payment-form .form-control,
#card-element {
    color: #000;
    border: 1px solid #000;
}

/* Button */
.btn {
    font-family: "Montserrat", sans-serif;
    color: #e3e6f2;
}

.btn-dark {
    color: black;
}

